<resources>
    <string name="app_name">teht8</string>
    <string name="name">Name</string>
    <string name="check_car">Owns a car</string>
    <string name="car_age">Age of the car</string>
    <string name="button">Save</string>
    <string name="advanced">Advanced options</string>
    <string name="type_stw">Station wagon</string>
    <string name="type_sedan">Sedan</string>
    <string name="type_sport">Sport</string>
    <string name="four_by_four">4x4</string>
</resources>
