<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity_1">

    <LinearLayout
        android:layout_width="352dp"
        android:layout_height="479dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:selectAllOnFocus="false"
            android:singleLine="false" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_car" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/car_age"
            android:inputType="number"
            android:visibility="visible" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button" />

        <Switch
            android:id="@+id/fourbyfour_toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/four_by_four"
            android:visibility="gone" />

        <RadioGroup
            android:id="@+id/car_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <RadioButton
                android:id="@+id/type_stw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/type_stw" />

            <RadioButton
                android:id="@+id/type_sport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/type_sport" />

            <RadioButton
                android:id="@+id/type_sedan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/type_sedan" />
        </RadioGroup>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>